# UUIDv7

./: LICENSE  README.md  pyproject.toml  test.py  uuid7.py
